# aoc-2025

./: Cargo.toml  LICENSE  README.md  benchmark.sh  deny.toml
githooks/: pre-commit
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  lib.rs
