[package]
name = "aoc-2025"
version = "0.0.0"
authors = ["ThiFerNe <thimo.f.neumann@gmail.com>"]
edition = "2024"
description = "My hand-crafted solutions to the Advent of Code 2025"
readme = "README.md"
repository = "https://github.com/ThiFerNe/aoc-2025"
license = "MIT"
publish = false

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[features]
default = ["part1", "part2", "internal_timings"]
part1 = []
part2 = []
internal_timings = []
benchmark = []

[dependencies]
derive_more = { version = "2", features = ["display"] }
itertools = "0.14"
rayon = "1"
thiserror = "2"

[profile.release]
opt-level = 3
